--- a/hw1/package.json
+++ b/hw1/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "async": "^1.4.2",
     "optimist": "^0.6.1",
+    "plotly": "^1.0.2",
+    "progress": "^1.1.8",
+    "seedrandom": "^2.4.2",
     "underscore": "^1.8.3"
   }
 }
